--- a/README.Rmd
+++ b/README.Rmd
@@ -35,7 +35,7 @@ knitr::opts_chunk$set(
 The goal of `mvgam` is to fit Bayesian Dynamic Generalized Additive Models (DGAMs) that can include highly flexible nonlinear predictor effects for both process and observation components. The package does this by relying on functionalities from the impressive [`brms`](https://paulbuerkner.com/brms/){target="_blank"} and [`mgcv`](https://cran.r-project.org/package=mgcv){target="_blank"} packages. This allows `mvgam` to fit a wide range of models, including:
 
 * [Multivariate State-Space Time Series models](https://nicholasjclark.github.io/mvgam/articles/trend_formulas.html){target="_blank"}
-* Hierarchical [N-mixture models](https://nicholasjclark.github.io/mvgam/articles/nmixtures.html){target="_blank"}
+* [Hierarchical N-mixture models](https://nicholasjclark.github.io/mvgam/articles/nmixtures.html){target="_blank"}
 * [Hierarchical Generalized Additive Models](https://www.youtube.com/watch?v=2POK_FVwCHk){target="_blank"}
 * [Joint Species Distribution Models](https://nicholasjclark.github.io/mvgam/reference/jsdgam.html){target="_blank"}
 
@@ -47,7 +47,7 @@ Install the stable version from `CRAN` using: `install.packages('mvgam')`, or in
 [![`mvgam` usage cheatsheet](https://github.com/nicholasjclark/mvgam/raw/master/misc/mvgam_cheatsheet.png)](https://github.com/nicholasjclark/mvgam/raw/master/misc/mvgam_cheatsheet.pdf)
 
 ## A simple example
-We can explore the package’s primary functions using one of it's built-in datasets. Use `plot_mvgam_series()` to inspect features for the four time series, which represent captures of rodent species over time (see `?portal_data` for more details)
+We can explore the package’s primary functions using one of it's built-in datasets. Use `plot_mvgam_series()` to inspect features for the four time series from [the Portal Project](https://portal.weecology.org/){target="_blank"}, which represent captures of four desert rodent species over time (see `?portal_data` for more details)
 ```{r include = FALSE}
 library(mvgam)
 library(ggplot2)
@@ -58,7 +58,7 @@ theme_set(theme_bw())
 library(mvgam)
 ```
 
-```{r, fig.alt = "Visualizing the multivariate time series in mvgam"}
+```{r, fig.alt = "Visualizing the multivariate time series in mvgam", warning=FALSE}
 data(portal_data)
 plot_mvgam_series(data = portal_data, 
                   y = 'captures',
@@ -70,6 +70,8 @@ plot_mvgam_series(data = portal_data,
                   y = 'captures',
                   series = 4)
 ```
+
+These plots show that the time series are count-responses, with missing data, seasonality and temporal autocorrelation all present. These features make time series analysis and forecasting very difficult if using conventional software and models. But `mvgam` shines in these tasks. 
 
 For most forecasting exercises, we'll want to split the data into training and testing folds
 ```{r}
@@ -107,8 +109,8 @@ mod <- mvgam(
   
   # Condition on the training data
   data = data_train,
-  control = list(adapt_delta = 0.95),
-  burnin = 1000
+  control = list(adapt_delta = 0.99),
+  burnin = 1500
 )
 ```
 
@@ -138,14 +140,18 @@ mod <- mvgam(
 )
 ```
 
-Have a look at this model's summary to see what is being estimated. We can suppress a summary of the spline $\beta$ coefficients, which is useful when there are many coefficients to report:
+Using `print()` will return a quick summary of the object:
 ```{r}
-summary(mod, include_betas = FALSE)
+mod
 ```
 
-Split Rhat diagnostics show good convergence of the model estimates
-```{r, fig.alt = "Rhats of parameters estimated with Stan in mvgam"}
+Split Rhat and effective sample size diagnostics show good convergence of the model estimates
+```{r, fig.alt = "Rhats of parameters estimated with Stan in mvgam", warning=FALSE}
 mcmc_plot(mod, type = 'rhat_hist')
+```
+
+```{r, fig.alt = "Effective sample sizes of parameters estimated with Stan in mvgam", warning=FALSE}
+mcmc_plot(mod, type = 'neff_hist')
 ```
 
 Use `conditional_effects()` for a quick visualisation of the main terms in model formulae
@@ -154,7 +160,7 @@ conditional_effects(mod, type = 'link')
 ```
 
 If you have the `gratia` package installed, it can also be used to plot partial effects of smooths
-```{r, fig.alt = "Plotting GAM smooth functions in mvgam using gratia"}
+```{r, fig.alt = "Plotting GAM smooth functions in mvgam using gratia", message=FALSE}
 require(gratia)
 draw(mod, trend_effects = TRUE)
 ```
