--- a/index.Rmd
+++ b/index.Rmd
@@ -17,7 +17,8 @@ Install the stable version from CRAN using: `install.packages('mvgam')`, or inst
 `devtools::install_github("nicholasjclark/mvgam")`. Note that to actually condition models with MCMC sampling, the `Stan` software must be installed (along with either `rstan` and/or `cmdstanr`). Only `rstan` is listed as a dependency of `mvgam` to ensure that installation is less difficult. If users wish to fit the models using `mvgam`, please refer to installation links for `Stan` with `rstan` [here](https://mc-stan.org/users/interfaces/rstan), or for `Stan` with `cmdstandr` [here](https://mc-stan.org/cmdstanr/). You will need a fairly recent version of `Stan` (preferably 2.29 or above) to ensure all the model syntax is recognized. We highly recommend you use `Cmdstan` through the `cmdstanr` interface as the backend. This is because `Cmdstan` is easier to install, is more up to date with new features, and uses less memory than `Rstan`. See [this documentation from the `Cmdstan` team for more information](http://mc-stan.org/cmdstanr/articles/cmdstanr.html#comparison-with-rstan). 
 
 ## Introductory seminar
-```{r echo=FALSE}
+```{r echo=FALSE, message=FALSE}
+library(dplyr)
 vembedr::embed_url("https://www.youtube.com/watch?v=0zZopLlomsQ") %>%
   vembedr::use_bs_responsive()
 ```
