--- a/vignettes/trend_formulas.Rmd
+++ b/vignettes/trend_formulas.Rmd
@@ -496,6 +496,33 @@ abline(h = 0, lty = "dashed")
 
 The models tend to provide similar forecasts, though the correlated error model does slightly better overall. We would probably need to use a more extensive rolling forecast evaluation exercise if we felt like we needed to only choose one for production. `mvgam` offers some utilities for doing this (i.e. see `?lfo_cv` for guidance). Alternatively, we could use forecasts from *both* models by creating an evenly-weighted ensemble forecast distribution. This capability is available using the `ensemble()` function in `mvgam` (see `?ensemble` for guidance). 
 
+Using `how_to_cite()` for models with VAR dynamics will give you information on how they are restricted to remain stationary:
+```{r}
+description <- how_to_cite(varcor_mod)
+```
+
+```{r, eval = FALSE}
+description
+```
+
+```{r, echo=FALSE}
+cat("Methods text skeleton\n")
+cat(insight::format_message(description$methods_text))
+```
+
+```{r echo=FALSE}
+cat("\nPrimary references\n")
+for (i in seq_along(description$citations)) {
+  cat(insight::format_message(description$citations[[i]]))
+  cat('\n')
+}
+cat("\nOther useful references\n")
+for (i in seq_along(description$other_citations)) {
+  cat(insight::format_message(description$other_citations[[i]]))
+  cat('\n')
+}
+```
+
 More advanced hierarchical panel VAR models can also be handled by using the `gr` and `subgr` arguments in `VAR()`. These models are useful if you have a data for the same set of series (`subgr`) that are measured in different regions (`gr`), such as species measured in different sampling regions or financial series measured in different countries.
 
 ## Further reading
